--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,11 @@ body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: #000000;
 }
-
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 .link {
   text-decoration: none;
 }
@@ -22,6 +26,9 @@ body {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+img {
+  display: block;
 }
 /* ----------------------ШАПКА-------------------------- */
 
@@ -266,8 +273,6 @@ body {
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
 
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -609,4 +614,41 @@ body {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+/* --------------МОДАЛЬНОЕ ОКНО------------------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity var(--time-transition), visibility var(--time-transition);
+}
+.modal {
+  width: 528px;
+  height: 581px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  background-color: transparent;
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
